--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ POSTGRES_PASSWORD="POSTGRES"
 POSTGRES_HOST="localhost"
 DATABASE_PORT="5432"
 DATABASE_URL="postgresql://POSTGRES:POSTGRES@localhost:5432/POSTGRES?schema=public"
+SUPABASE_DB_URL='postgresql://postgres:GPV0PmjFahIduHib@db.pkgrtavgertlzgsxrdhv.supabase.co:5432/postgres'
 PGADMIN_DEFAULT_EMAIL='root@gmail.com'
 PGADMIN_DEFAULT_PASSWORD='root'
