--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ DATABASE_URL="postgresql://POSTGRES:POSTGRES@localhost:5432/POSTGRES?schema=publ
 SUPABASE_DB_URL='postgresql://postgres:GPV0PmjFahIduHib@db.pkgrtavgertlzgsxrdhv.supabase.co:5432/postgres'
 PGADMIN_DEFAULT_EMAIL='root@gmail.com'
 PGADMIN_DEFAULT_PASSWORD='root'
+RECAPTCHA_SECRET="6LdGQxwkAAAAAI2Qku1qjb-AkjwYn_Pgcp_7PpuR"
+# 6LdGQxwkAAAAAMdfaPhemcdjuC-lBeBvhrKHiW3C
+# 6LdGQxwkAAAAAI2Qku1qjb-AkjwYn_Pgcp_7PpuR
