--- a/.env.prod
+++ b/.env.prod
@@ -1,21 +1,23 @@
 POSTGRES_DB="POSTGRES"
 POSTGRES_USER= "POSTGRES"
 POSTGRES_PASSWORD="POSTGRES"
-POSTGRES_HOST="localhost"
+POSTGRES_HOST="nestjs-postgres"
 DATABASE_PORT="5432"
 
-DATABASE_URL="postgresql://POSTGRES:POSTGRES@localhost:5432/POSTGRES?schema=public"
+
+DATABASE_URL="postgresql://POSTGRES:POSTGRES@nestjs-postgres:5432/POSTGRES?schema=public"
+
+
 SUPABASE_DB_URL='postgresql://postgres:GPV0PmjFahIduHib@db.pkgrtavgertlzgsxrdhv.supabase.co:5432/postgres'
+
 
 PGADMIN_DEFAULT_EMAIL='root@gmail.com'
 PGADMIN_DEFAULT_PASSWORD='root'
 
+
 RECAPTCHA_SECRET="6LdGQxwkAAAAAI2Qku1qjb-AkjwYn_Pgcp_7PpuR"
 
-
-AUTH_SERVER_URL="http://localhost:89/auth"
+AUTH_SERVER_URL="http://keycloak:89/auth"
 REALM="ohif"
 CLIENT_ID="ohif-api"
 SECRET="giZLRX5F9YCyNXMBa0bTDXZCpIvpJEi2"
-# 6LdGQxwkAAAAAMdfaPhemcdjuC-lBeBvhrKHiW3C
-# 6LdGQxwkAAAAAI2Qku1qjb-AkjwYn_Pgcp_7PpuR
