--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,23 +8,23 @@ services:
     volumes:
       - /data/postgres:/data/postgres
     env_file:
-      - .env
-    networks:
+      - .env.prod
+      
+  main:
+    container_name: main
+    # restart: always
+    build: .
+    env_file:
+      - .env.prod
+    ports:
+      - 8888:8888
+    command: yarn start:prod
+    depends_on:
       - postgres
 
-  pgadmin:
-    links:
-      - postgres:postgres
-    container_name: nestjs-pgadmin
-    image: dpage/pgadmin4
-    ports:
-      - "9999:80"
-    volumes:
-      - /data/pgadmin:/root/.pgadmin
-    env_file:
-      - .env
-    networks:
-      - postgres
+
+
+
 
 networks:
   postgres:
