--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: nestjs-postgres
     image: postgres:latest
     ports:
-      - "5432:5432"
+      - "28432:5432"
     volumes:
       - /data/postgres:/data/postgres
     env_file:
@@ -12,7 +12,7 @@ services:
       
   main:
     container_name: main
-    # restart: always
+    restart: always
     build: .
     env_file:
       - .env.prod
@@ -22,10 +22,6 @@ services:
     depends_on:
       - postgres
 
-
-
-
-
-networks:
-  postgres:
-    driver: bridge
+# networks:
+#   postgres:
+#     driver: bridge
