--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ POSTGRES_DB="POSTGRES"
 POSTGRES_USER= "POSTGRES"
 POSTGRES_PASSWORD="POSTGRES"
 POSTGRES_HOST="localhost"
-DATABASE_PORT="5432"
+DATABASE_PORT="28432"
 
-DATABASE_URL="postgresql://POSTGRES:POSTGRES@localhost:5432/POSTGRES?schema=public"
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${DATABASE_PORT}/${POSTGRES_DB}?schema=public"
 SUPABASE_DB_URL='postgresql://postgres:GPV0PmjFahIduHib@db.pkgrtavgertlzgsxrdhv.supabase.co:5432/postgres'
 
 PGADMIN_DEFAULT_EMAIL='root@gmail.com'
