--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
+    "joi": "^17.7.0",
     "nest-keycloak-connect": "^1.9.1",
     "nestjs-keycloak": "^2.1.7",
     "pg": "^8.8.0",
