--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postgrator": "4.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "uuid": "^9.0.0",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
