add env off RecaptchaGuard

--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,4 @@
+PORT="8888"
 POSTGRES_DB="POSTGRES"
 POSTGRES_USER= "POSTGRES"
 POSTGRES_PASSWORD="POSTGRES"
@@ -11,6 +12,7 @@ SUPABASE_DB_URL='postgresql://postgres:GPV0PmjFahIduHib@db.pkgrtavgertlzgsxrdhv.
 PGADMIN_DEFAULT_EMAIL='root@gmail.com'
 PGADMIN_DEFAULT_PASSWORD='root'
 
+RECAPTCHA_DISABLE="true"
 RECAPTCHA_SECRET="6LdGQxwkAAAAAI2Qku1qjb-AkjwYn_Pgcp_7PpuR"
 
 AUTH_SERVER_URL="[https://mr.eyelab.kz/auth/](https://mr.eyelab.kz/auth/)"
