--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ SUPABASE_DB_URL='postgresql://postgres:GPV0PmjFahIduHib@db.pkgrtavgertlzgsxrdhv.
 PGADMIN_DEFAULT_EMAIL='root@gmail.com'
 PGADMIN_DEFAULT_PASSWORD='root'
 
+RECAPTCHA_DISABLE="true"
 RECAPTCHA_SECRET="6LdGQxwkAAAAAI2Qku1qjb-AkjwYn_Pgcp_7PpuR"
 
 
