add MESSENGER conf

--- a/.env
+++ b/.env
@@ -19,5 +19,8 @@ AUTH_SERVER_URL="http://localhost:89/auth"
 REALM="ohif"
 CLIENT_ID="ohif-api"
 SECRET="giZLRX5F9YCyNXMBa0bTDXZCpIvpJEi2"
+
+MESSENGER_USERNAME="messenger-service"
+MESSENGER_PASSWORD="tctrygnype"
 # 6LdGQxwkAAAAAMdfaPhemcdjuC-lBeBvhrKHiW3C
 # 6LdGQxwkAAAAAI2Qku1qjb-AkjwYn_Pgcp_7PpuR
