--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
     "@prisma/client": "^4.8.1",
+    "@types/aws-sdk": "^2.7.0",
+    "@types/multer": "^1.4.7",
+    "aws-sdk": "^2.1315.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
