--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "aws-sdk": "^2.1315.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "joi": "^17.7.0",
     "nest-keycloak-connect": "^1.9.1",
