--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # compiled output
-.env.prod
+
 /dist
 /node_modules
 #prisma types
@@ -7,6 +7,7 @@
 /sh
 /generated
 .env
+.prod.env
 # Logs
 logs
 *.log
